<resources>
    <string name="app_name">Operaciones Basicas</string>
    <string name="lb_titulo">Samuel Zarrabal Perez</string>

    <string name="hint_num1">Numero 1</string>
    <string name="hint_num2">Numero 2</string>
    <string name="btn_suma">Suma</string>
    <string name="btn_resta">Resta</string>
    <string name="btn_multiplicacion">Multiplicacion</string>
    <string name="btn_division">Division</string>
</resources>
