<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="352dp"
        android:text="@string/btn_suma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="352dp"
        android:text="@string/btn_resta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_multiplicacion"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="260dp"
        android:text="@string/btn_multiplicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="260dp"
        android:text="@string/btn_division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="570dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_numero1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num1"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_numero2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num2"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>